--- a/_site.yml
+++ b/_site.yml
@@ -8,6 +8,13 @@ navbar:
       href: resume.html
     - text: "Project Example"
       href: project.html
+  right:
+    - text: ""
+      icon: fa-github
+      href: https://github.com/cameronlyons/cameronlyons.github.io/
+    - text: ""
+      icon: fa-twitter
+      href: https://twitter.com/CameronL3310
 
 output:
   html_document:
