--- a/_site.yml
+++ b/_site.yml
@@ -12,6 +12,9 @@ navbar:
     - text: ""
       icon: fa-twitter
       href: https://twitter.com/CameronL3310
+    - text: ""
+      icon: fa-github
+      href: https://github.com/cameronlyons/datascience1repo      
 
 output:
   html_document:
